<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_text">Login</string>
    <string name="login_hint">login name</string>
    <string name="password_text">Password</string>
    <string name="password_hint">Password</string>
    <string name="switch_text">What does this do</string>
    <string name="radioButton">RadioButton</string>
    <string name="checkBox">CheckBox</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Make a selection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="btnText">Start Chat</string>
    <string name="sendText">Send</string>
    <string name="minTemp">Minimum Temp</string>
    <string name="maxTemp">Maximum Temp</string>
    <string name="currentTemp">Current Temp</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="author_name">Author: Hunardeep Sandhu\n This is towards Lab08 grade</string>
    <string name="app_title">Lab 08</string>
    <string name="app_message">Welcome to my application</string>
    <string name="current_msg">You have selected Item 1</string>
    <string name="return_msg">Do you wanna go back?</string>
    <string name="return_title">Exit Dialog</string>
    <string name="exit_app_message">You decided to stay on this page</string>


</resources>
