<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:layout_column="0"
        android:text="@string/radioButton"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />
    <CheckBox
        android:layout_row="0"
        android:id="@+id/chkBox"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/checkBox"
        android:gravity="fill"
        />
    <Switch
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:id="@+id/toggleSwitch"
        android:text="@string/switch_text"/>

    <ImageButton
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
android:id="@+id/camera"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>